--- a/src/pages/About/styles.module.css
+++ b/src/pages/About/styles.module.css
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   background-position: center;
-  height: 100%;
 }
 
 .buttonContainer {
