--- a/src/pages/HowToPlay/styles.module.css
+++ b/src/pages/HowToPlay/styles.module.css
@@ -7,12 +7,8 @@
 }
 
 .backgroundContainer {
-  background-repeat: no-repeat;
-  background-size: cover;
   display: flex;
   flex-direction: column;
-  background-position: center;
-  height: 100%;
 }
 
 h2{
