--- a/src/pages/Leaderboard/styles.module.css
+++ b/src/pages/Leaderboard/styles.module.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   background-position: center;
-  min-height: 100%;
 }
 
 .leaderboardContainer{
